<resources>
    <string name="app_name">PictureOfTheDay</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_btn">fab_btn</string>
    <string name="defaultChip">Default</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="entry">Entry</string>
    <string name="choice">Choice</string>
    <string name="action">Action</string>
    <string name="filter">Filter</string>
    <string name="background_color">Background Color</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="chip_icon">Chip icon</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="choose_one">Choose One</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="chip">Chip</string>
    <string name="group">Group</string>
    <string name="in">in</string>
    <string name="single">single</string>
    <string name="line">line</string>
    <string name="add">add</string>
    <string name="a">a</string>
    <string name="horizontal">horizontal</string>
    <string name="scroll">scroll</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="raised_button">Raised Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="text_button">Text Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button">Radio Button</string>
    <string name="switch_material">Switch</string>
    <string name="filled_box_text_field">Filled Box Text Field</string>
    <string name="outlined_box_text_field">Outlined Box Text Field</string>
    <string name="text">Text</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="card">Card</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="choice_theme">Choice theme</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation">navigation</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">System</string>
    <string name="todo">todo</string>
    <string name="main">Main</string>
    <string name="caption">This images was taken by NASA\'s EPIC camera onboard the NOAA DSCOVR spacecraft</string>
    <string name="earth_button_text">Показать актуальные фото Земли</string>
    <string name="extract_text">Дополнительный текст</string>
    <string name="words_regex">(?i)(star|stars|sun)</string>
    <string name="words_regex_modify">\\s+</string>
    <string name="star_or_sun">star|sun</string>
    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
    <string name="description_mars">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
</resources>
