<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayout">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:checkedChip="@id/today"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/before_yesterday"
                        android:layout_width="@dimen/chips_width"
                        android:layout_height="wrap_content"
                        android:text="@string/before_yesterday"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/yesterday"
                        android:layout_width="@dimen/chips_width"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/today"
                        android:layout_width="@dimen/chips_width"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textAlignment="center" />
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <molinov.pictureoftheday.util.EquilateralImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo_of_the_day_stub"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips"
                app:srcCompat="@drawable/ic_no_photo_vector" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_btn"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="#FFFFFF" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
